# voice_trunscriber_web

./: docker-compose.yml
backend/: pyproject.toml
backend/app/: db.py
backend/app/models/: user.py
