[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["AlexandrLutay <alex896201090091@hmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = ">=2.12.4,<3.0.0"
beanie = ">=2.0.0,<3.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
